added @RequiredArgsConstructor and @Mapper